# rocket-in-action

./: .gitignore  Cargo.toml  README.md  Rocket.toml
examples/: dynamic-path.rs  hello.rs  namespace.rs  restful.rs
src/: main.rs
